@@ -24,8 +24,8 @@ intaRNA_SOURCES =	intaRNA.cpp \
 					InteractionEnergyVrna.cpp \
 					Predictor.h \
 					Predictor.cpp \
-					PredictorRNAup.h \
-					PredictorRNAup.cpp \
+					PredictorMfeRNAup.h \
+					PredictorMfeRNAup.cpp \
 					OutputHandler.h \
 					OutputHandler.cpp \
 					OutputHandlerText.h \
