@@ -23,5 +23,3 @@ Predictor::~Predictor()
 
 ////////////////////////////////////////////////////////////////////////////
 
-////////////////////////////////////////////////////////////////////////////
-
