@@ -1,11 +1,11 @@
 
-#ifndef PREDICTORRNAUP_H_
-#define PREDICTORRNAUP_H_
+#ifndef PREDICTORMFERNAUP_H_
+#define PREDICTORMFERNAUP_H_
 
 #include "Predictor.h"
 #include "Interaction.h"
 
-#include <boost/numeric/ublas/banded.hpp>
+#include <boost/numeric/ublas/matrix.hpp>
 
 /**
  * Predictor for RNAup-like computation, i.e. full DP-implementation without
@@ -41,10 +41,8 @@ public:
 
 	/**
 	 * Computes the mfe for the given sequence ranges (i1-j1) in the first
-	 * sequence and (i2-j2) in the second sequence.
-	 *
-	 * Furthermore, the mfe interaction is identified and reported to the
-	 * output handler
+	 * sequence and (i2-j2) in the second sequence and reports it to the output
+	 * handler.
 	 *
 	 * @param i1 the index of the first sequence interacting with i2
 	 * @param j1 the index of the first sequence interacting with j2
@@ -53,14 +51,7 @@ public:
 	 */
 	void
 	predict( const size_t i1 = 0, const size_t j1 = RnaSequence::lastPos
-			, const size_t i2 = 0, const size_t j2 = RnaSequence::lastPos);
-
-	/**
-	 * Removes all temporary data structures and resets the predictor
-	 */
-	void
-	clear();
-
+				, const size_t i2 = 0, const size_t j2 = RnaSequence::lastPos);
 
 protected:
 
@@ -76,41 +67,27 @@ protected:
 	//! NOTE: hybridE(i1,i2)==NULL if not complementary(seq1[i1],seq2[i2])
 	E4dMatrix hybridE;
 
-	size_t i1offset;
-	size_t i2offset;
-
-	//! the mfe interaction
+	//! mfe interaction boundaries
 	Interaction mfeInteraction;
+
+	//! offset for indices in sequence 1 for current computation
+	size_t i1offset;
+	//! offset for indices in sequence 2 for current computation
+	size_t i2offset;
 
 protected:
 
+	/**
+	 * Removes all temporary data structures and resets the predictor
+	 */
+	void
+	clear();
 
 	/**
 	 * computes all entries of the hybridE matrix
 	 */
 	void
 	fillHybridE( const InteractionEnergy & energy );
-
-	/**
-	 * Initializes the global energy minimum
-	 */
-	void
-	initMfe();
-
-	/**
-	 * updates the global energy minimum if needed
-	 * @param i1 the index of the first sequence interacting with i2
-	 * @param j1 the index of the first sequence interacting with j2
-	 * @param i2 the index of the second sequence interacting with i1
-	 * @param j2 the index of the second sequence interacting with j1
-	 * @param eH the energy of the hybridization only (just base pairs etc)
-	 * @param eE the energy of the hybridization's dangling ends (left+right)
-	 * @param eD the energy needed to make it accessible (seq1[i-j]+seq2[i-j])
-	 */
-	void
-	updateMfe( const size_t i1, const size_t j1
-			, const size_t i2, const size_t j2
-			, const E_type eH, const E_type eE, const E_type eD );
 
 	/**
 	 * Fills a given interaction (boundaries given) with the according
@@ -120,6 +97,30 @@ protected:
 	void
 	traceBack( Interaction & interaction ) const;
 
+	/**
+	 * Initializes the global energy minimum
+	 */
+	virtual
+	void
+	initMfe();
+
+	/**
+	 * updates the global optimum to be the mfe interaction if needed
+	 *
+	 * @param i1 the index of the first sequence interacting with i2
+	 * @param j1 the index of the first sequence interacting with j2
+	 * @param i2 the index of the second sequence interacting with i1
+	 * @param j2 the index of the second sequence interacting with j1
+	 * @param eH the energy of the hybridization only (just base pairs etc)
+	 * @param eE the energy of the hybridization's dangling ends (left+right)
+	 * @param eD the energy needed to make it accessible (seq1[i-j]+seq2[i-j])
+	 */
+	virtual
+	void
+	updateMfe( const size_t i1, const size_t j1
+			, const size_t i2, const size_t j2
+			, const E_type eH, const E_type eE, const E_type eD );
+
 };
 
-#endif /* PREDICTORRNAUP_H_ */
+#endif /* PREDICTORMFERNAUP_H_ */
